adding generate csv notebook

--- a/Python/API Rest/6 - Chamadas na API Flask.ipynb
+++ b/Python/API Rest/6 - Chamadas na API Flask.ipynb
@@ -572,6 +572,27 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gerar arquivo CSV: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/csv')\n",
+    "def csv():\n",
+    "    data = u'1,2,3\\n4,5,6\\n'\n",
+    "    bom = u'\\ufeff'\n",
+    "    response = Response(bom + data, content_type='text/csv; charset=utf-16')\n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -589,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -604,16 +625,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pyngrok\n",
-      "  Downloading pyngrok-7.1.6-py3-none-any.whl.metadata (7.4 kB)\n",
-      "Collecting PyYAML>=5.1 (from pyngrok)\n",
-      "  Downloading PyYAML-6.0.1-cp312-cp312-win_amd64.whl.metadata (2.1 kB)\n",
-      "Downloading pyngrok-7.1.6-py3-none-any.whl (22 kB)\n",
-      "Downloading PyYAML-6.0.1-cp312-cp312-win_amd64.whl (138 kB)\n",
-      "   ---------------------------------------- 0.0/138.7 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 138.7/138.7 kB 4.0 MB/s eta 0:00:00\n",
-      "Installing collected packages: PyYAML, pyngrok\n",
-      "Successfully installed PyYAML-6.0.1 pyngrok-7.1.6\n",
+      "Requirement already satisfied: pyngrok in c:\\users\\thaty\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (7.1.6)\n",
+      "Requirement already satisfied: PyYAML>=5.1 in c:\\users\\thaty\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pyngrok) (6.0.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -642,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -665,21 +678,6 @@
     "\n",
     "!ngrok config add-authtoken <seu-token>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "2333c9c1-ca4c-40bf-bb21-27d0e14aa243",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
