chamadas no webhook teste

--- a/Databricks/6 - Chamadas na API Flask.ipynb
+++ b/Databricks/6 - Chamadas na API Flask.ipynb
@@ -1382,6 +1382,7 @@
     "@app.route(\"/aluno\", methods=[\"POST\"])\n",
     "def incluir_novo_aluno():\n",
     "    novo_aluno = request.get_json()\n",
+    "    # antes do append deveriamos verificar se estão presentes todos os campos e nos formatos específicos\n",
     "    dados_alunos.append(novo_aluno)\n",
     "    # neste ponto salvar os dados em um arquivo/banco de dados\n",
     "    return jsonify(dados_alunos)\n",
