--- a/Python/Estrutura de dados/estruturadedadosaula1.ipynb
+++ b/Python/Estrutura de dados/estruturadedadosaula1.ipynb
@@ -182,6 +182,19 @@
     "\n",
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### E por que aprendemos? \n",
+    "\n",
+    "- Facilita no desenvolvimento de algumas funções que trabalham com estrutura de dados.\n",
+    "\n",
+    "- Pode ser que ao pesquisar algo, o exemplo apresentado esteja de forma recursiva.\n",
+    "\n",
+    "- Alguns algoritmos apresentados na disciplina atuam de forma recursiva."
+   ]
   }
  ],
  "metadata": {
