estrutura de dados aula 2

--- a/Python/Estrutura de dados/estruturadedadosaula1.ipynb
+++ b/Python/Estrutura de dados/estruturadedadosaula1.ipynb
@@ -177,8 +177,12 @@
     "### Pilha de Chamadas\n",
     "\n",
     "- A pilha de chamadas não é infinita!\n",
-    "\n",
     "Dependendo da chamada de funções recursivas, ocorrerá um overflowing.\n",
+    "\n",
+    "\n",
+    "\n",
+    "<b> A pilha de chamadas é uma estrutura finita que armazena as chamadas de uma função recursiva.</b>\n",
+    "\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -370,6 +374,37 @@
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elemento Central: 2\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo de um algoritmo Big-O = 0(1)    - O verdinho no grafico de Big-O\n",
+    "# Ou seja aquele algoritmo com menor tempo de execucao e complexidade\n",
+    "\n",
+    "\n",
+    "def ElementoCentral(N):\n",
+    "    if len(N) > 0:\n",
+    "        inicio = 0\n",
+    "        fim = len(N)\n",
+    "        meio = int((fim -inicio)/2)\n",
+    "        print(f\"Elemento Central: {N[meio]}\")\n",
+    "\n",
+    "print(ElementoCentral([1,2,3]))\n",
+    "\n",
+    "# O algoritmo acima nao tem recursividade, nao tem laco de repeticao, nao utiliza bibliotecas externas, e eh executado apenas 1 vez\n"
    ]
   }
  ],
