exercicio 1 mergesort completo e comentado

--- a/Python/Estrutura de dados/atividadepratica.ipynb
+++ b/Python/Estrutura de dados/atividadepratica.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,26 +101,26 @@
     "        direita = dados[meio:] # Divido a minha lista em outra metade: direita -> contém o elemento do meio aos últimos elementos da lista\n",
     "        mergeSort(esquerda) # Recursão da função mergeSort para ordenar a sublista da \"esquerda\"\n",
     "        mergeSort(direita) # Recursão da função mergeSort para ordenar a sublista da \"direita\"\n",
-    "        i = j = k = 0 # Variáveis de contgrole para iterar pelas listas \"esquerda\", \"direita\" e \"dados\"\n",
+    "        i = j = k = 0 # Variáveis de controle para iterar pelas listas \"esquerda\", \"direita\" e \"dados\"\n",
     "        while i<len(esquerda) and j<len(direita): # Loop que executa enquanto houver elementos nas listas \"esquerda\" e \"direita\"\n",
-    "            if esquerda[i]>direita[j]:\n",
-    "                dados[k]=esquerda[i]\n",
-    "                i=i+1\n",
-    "            else:\n",
-    "                dados[k]=direita[j]\n",
-    "                j=j+1\n",
-    "            k=k+1\n",
-    "        while i<len(esquerda):\n",
-    "            dados[k]=esquerda[i]\n",
-    "            i=i+1\n",
-    "            k=k+1\n",
-    "        while j<len(direita):\n",
-    "            dados[k]=direita[j]\n",
-    "            j=j+1\n",
+    "            if esquerda[i]>direita[j]: # Verifico se o elemento da esquerda é maior que o da direita\n",
+    "                dados[k]=esquerda[i] # Se a condição anterior for verdade, o elemento maior é colocado na posição atual da lista \"dados\" e o índice i é incrementado para apontar para o próximo item da lista \"esquerda\"\n",
+    "                i=i+1 # Incremento do i, para passar para o próximo elemento da lista \"esquerda\"\n",
+    "            else: # Se a condição for falsa\n",
+    "                dados[k]=direita[j] # O elemento maior que será o da direita, é colocado na posição atual da lista \"dados\"\n",
+    "                j=j+1 # O índice j é incrementado para apontar para o próximo item da lista \"direita\"\n",
+    "            k=k+1 # O índice k é incrementado para assim avançar para o próximo item da lista \"dados\"\n",
+    "        while i<len(esquerda): # Enquanto um elemento da lista \"esquerda\" restar \n",
+    "            dados[k]=esquerda[i] # O item da lista \"esquerda\" será copiado para a lista \"dados\"\n",
+    "            i=i+1 # Passa por cada elemento da lista \"esquerda\" pelo incremento\n",
+    "            k=k+1 # Passa por cada elemento da lista \"dados\" pelo incremento\n",
+    "        while j<len(direita): # Enquanto um elemento da lista \"direita\" restar \n",
+    "            dados[k]=direita[j] # O item da lista \"direita\" será copiado para a lista \"dados\"\n",
+    "            j=j+1 # Passa por cada elemento da lista \"direita\" pelo incremento\n",
     "            \n",
-    "dados = [54, 26, 93, 17, 77, 31, 44, 55]\n",
-    "mergeSort(dados)\n",
-    "print(dados) "
+    "dados = [54, 26, 93, 17, 77, 31, 44, 55] # Declaro a minha lista de dados\n",
+    "mergeSort(dados) # Chamo a função e passo como parâmetro a lista que quero ordenar\n",
+    "print(dados) # Imprimo o resultado"
    ]
   }
  ],
