--- a/Python/Estrutura de dados/atividadepratica.ipynb
+++ b/Python/Estrutura de dados/atividadepratica.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
     "        mergeSort(direita) # Recursão da função mergeSort para ordenar a sublista da \"direita\"\n",
     "        i = j = k = 0 # Variáveis de controle para iterar pelas listas \"esquerda\", \"direita\" e \"dados\"\n",
     "        while i<len(esquerda) and j<len(direita): # Loop que executa enquanto houver elementos nas listas \"esquerda\" e \"direita\"\n",
-    "            if esquerda[i]>direita[j]: # Verifico se o elemento da esquerda é maior que o da direita\n",
+    "            if esquerda[i]>direita[j]: # Verifico se o elemento da esquerda é maior que o da direita (AQUI CONSIGO ORDENAR DO MAIOR PARA O MENOR ELEMENTO)\n",
     "                dados[k]=esquerda[i] # Se a condição anterior for verdade, o elemento maior é colocado na posição atual da lista \"dados\" e o índice i é incrementado para apontar para o próximo item da lista \"esquerda\"\n",
     "                i=i+1 # Incremento do i, para passar para o próximo elemento da lista \"esquerda\"\n",
     "            else: # Se a condição for falsa\n",
@@ -122,6 +122,13 @@
     "mergeSort(dados) # Chamo a função e passo como parâmetro a lista que quero ordenar\n",
     "print(dados) # Imprimo o resultado"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
