Atividade pratica documento word

--- a/Python/Estrutura de dados/atividadepratica.ipynb
+++ b/Python/Estrutura de dados/atividadepratica.ipynb
@@ -108,7 +108,7 @@
     "                i=i+1 # Incremento do i, para passar para o próximo elemento da lista \"esquerda\"\n",
     "            else: # Se a condição for falsa\n",
     "                dados[k]=direita[j] # O elemento maior que será o da direita, é colocado na posição atual da lista \"dados\"\n",
-    "                j=j+1 # O índice j é incrementado para apontar para o próximo item da lista \"direita\"\n",
+    "                j=j+1 # O índice j é incrementado para apontar para o próximo item da lista \"direita\"D\n",
     "            k=k+1 # O índice k é incrementado para assim avançar para o próximo item da lista \"dados\"\n",
     "        while i<len(esquerda): # Enquanto um elemento da lista \"esquerda\" restar \n",
     "            dados[k]=esquerda[i] # O item da lista \"esquerda\" será copiado para a lista \"dados\"\n",
