estrutura de dados aula 6

--- a/Python/Estrutura de dados/atividadepratica.ipynb
+++ b/Python/Estrutura de dados/atividadepratica.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercício 1\n",
     "O algoritmo de ordenação por intercalação, ou Merge Sort, usufrui da estratégia de dividir para conquistar. O Merge Sort realiza a ordenação dividindo um conjunto de dados em meta-des iguais e reorganizando essas metades. É um algoritmo que opera de maneira recursiva, dividindo de maneira contínua o conjunto de dados até eles tornarem-se indivisíveis.\n",
     "\n",
     "Abaixo temos o código da função em Python do algoritmo Merge Sort."
@@ -11,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -124,11 +125,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercício 2 \n",
+    "\n",
+    "Você e seus amigos decidiram desenvolver um jogo de cartas em linguagem python, e você\n",
+    "ficou encarregado de desenvolver as funções: embaralhaCartas e compraCarta.\n",
+    "As 52 cartas do baralho estão na lista de string abaixo:\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "baralho = [\"A-Copas\",\"A-Paus\",\"A-Espadas\",\"A-Ouros\",\n",
+    " \"2-Copas\",\"2-Paus\",\"2-Espadas\",\"2-Ouros\",\n",
+    " \"3-Copas\",\"3-Paus\",\"3-Espadas\",\"3-Ouros\",\n",
+    " \"4-Copas\",\"4-Paus\",\"4-Espadas\",\"4-Ouros\",\n",
+    " \"5-Copas\",\"5-Paus\",\"5-Espadas\",\"5-Ouros\",\n",
+    " \"6-Copas\",\"6-Paus\",\"6-Espadas\",\"6-Ouros\",\n",
+    " \"7-Copas\",\"7-Paus\",\"7-Espadas\",\"7-Ouros\",\n",
+    " \"8-Copas\",\"8-Paus\",\"8-Espadas\",\"8-Ouros\",\n",
+    " \"9-Copas\",\"9-Paus\",\"9-Espadas\",\"9-Ouros\",\n",
+    " \"10-Copas\",\"10-Paus\",\"10-Espadas\",\"10-Ouros\",\n",
+    " \"J-Copas\",\"J-Paus\",\"J-Espadas\",\"J-Ouros\",\n",
+    " \"Q-Copas\",\"Q-Paus\",\"Q-Espadas\",\"Q-Ouros\",\n",
+    " \"K-Copas\",\"K-Paus\",\"K-Espadas\",\"K-Ouros\"] \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função “embaralhaCartas”, deve receber a lista “baralho” e retornar uma pilha de cartas, a\n",
+    "qual será utilizada pela função “compraCartas”. A função “compraCartas” vai receber a pilha\n",
+    "de cartas e retirar a carta do topo da pilha, e imprimindo a mesma na tela.\n",
+    "\n",
+    "\n",
+    "Vale lembrar que a cada vez que o código rodar, novas três cartas serão apresentadas\n",
+    "devido a função “embaralhaCartas”. Você estudante deve comentar todas as linhas de\n",
+    "código, explicando o que está sendo realizado. Não se esqueça de testar o código e anexar\n",
+    "a print do terminal no documento de entrega. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carta comprada: 3-Espadas\n",
+      "Carta comprada: 8-Paus\n",
+      "Carta comprada: 10-Espadas\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Definição da classe para representar uma pilha de cartas\n",
+    "class Stack: \n",
+    "    def __init__(self):\n",
+    "        self.items = []  # Inicializa a lista que vai armazenar as cartas da pilha\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.items == []  # Verifica se a pilha está vazia\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.items.append(item)  # Adiciona um item ao topo da pilha\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return self.items.pop()  # Remove e retorna o item do topo da pilha\n",
+    "\n",
+    "# Função para embaralhar o baralho e retornar uma pilha de cartas\n",
+    "def embaralhaCartas(baralho):\n",
+    "    random.shuffle(baralho)  # Embaralha o baralho\n",
+    "    pilha_de_cartas = Stack()  # Cria uma nova instância da classe Stack para representar a pilha\n",
+    "    for carta in baralho:\n",
+    "        pilha_de_cartas.push(carta)  # Adiciona cada carta embaralhada à pilha\n",
+    "    return pilha_de_cartas  # Retorna a pilha de cartas\n",
+    "\n",
+    "# Função para comprar uma carta da pilha e imprimir na tela\n",
+    "def compraCartas(pilha_de_cartas):\n",
+    "    if not pilha_de_cartas.isEmpty():  # Verifica se a pilha não está vazia\n",
+    "        carta_comprada = pilha_de_cartas.pop()  # Remove a carta do topo da pilha\n",
+    "        print(\"Carta comprada:\", carta_comprada)  # Imprime a carta comprada\n",
+    "    else:\n",
+    "        print(\"A pilha de cartas está vazia.\")  # Caso a pilha esteja vazia, imprime uma mensagem de aviso\n",
+    "\n",
+    "# Exemplo de uso\n",
+    "\n",
+    "baralho = [\"A-Copas\",\"A-Paus\",\"A-Espadas\",\"A-Ouros\",\n",
+    " \"2-Copas\",\"2-Paus\",\"2-Espadas\",\"2-Ouros\",\n",
+    " \"3-Copas\",\"3-Paus\",\"3-Espadas\",\"3-Ouros\",\n",
+    " \"4-Copas\",\"4-Paus\",\"4-Espadas\",\"4-Ouros\",\n",
+    " \"5-Copas\",\"5-Paus\",\"5-Espadas\",\"5-Ouros\",\n",
+    " \"6-Copas\",\"6-Paus\",\"6-Espadas\",\"6-Ouros\",\n",
+    " \"7-Copas\",\"7-Paus\",\"7-Espadas\",\"7-Ouros\",\n",
+    " \"8-Copas\",\"8-Paus\",\"8-Espadas\",\"8-Ouros\",\n",
+    " \"9-Copas\",\"9-Paus\",\"9-Espadas\",\"9-Ouros\",\n",
+    " \"10-Copas\",\"10-Paus\",\"10-Espadas\",\"10-Ouros\",\n",
+    " \"J-Copas\",\"J-Paus\",\"J-Espadas\",\"J-Ouros\",\n",
+    " \"Q-Copas\",\"Q-Paus\",\"Q-Espadas\",\"Q-Ouros\",\n",
+    " \"K-Copas\",\"K-Paus\",\"K-Espadas\",\"K-Ouros\"] \n",
+    "\n",
+    "pilha_de_cartas = embaralhaCartas(baralho)  # Embaralha o baralho e obtém a pilha de cartas\n",
+    "compraCartas(pilha_de_cartas)  # Compra uma carta da pilha e a imprime na tela\n",
+    "compraCartas(pilha_de_cartas)  # Compra outra carta da pilha e a imprime na tela\n",
+    "compraCartas(pilha_de_cartas)  # Compra mais uma carta da pilha e a imprime na tela\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carta comprada: 2-Ouros\n",
+      "Carta comprada: 2-Espadas\n",
+      "Carta comprada: J-Copas\n",
+      "Carta comprada: 6-Espadas\n",
+      "Carta comprada: Q-Paus\n",
+      "Carta comprada: 5-Copas\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Para testar seu código, utilize o trecho de código abaixo:\n",
+    "\n",
+    "pilhaCartas = embaralhaCartas(baralho)\n",
+    "compraCartas(pilhaCartas)\n",
+    "compraCartas(pilhaCartas)\n",
+    "compraCartas(pilhaCartas)\n",
+    "\n",
+    "# Saída esperada:\n",
+    "\n",
+    "pilhaCartas = embaralhaCartas(baralho)\n",
+    "compraCartas(pilhaCartas)\n",
+    "compraCartas(pilhaCartas)\n",
+    "compraCartas(pilhaCartas) "
+   ]
   }
  ],
  "metadata": {
