trabalho de estrutura de dados

--- a/Python/Estrutura de dados/atividadepratica.ipynb
+++ b/Python/Estrutura de dados/atividadepratica.ipynb
@@ -11,63 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mergeSort(dados):\n",
-    "    if len(dados) > 1:\n",
-    "        meio = len(dados)//2\n",
-    "        esquerda = dados[:meio]\n",
-    "        direita = dados[meio:]\n",
-    "        mergeSort(esquerda)\n",
-    "        mergeSort(direita)\n",
-    "        i = j = k = 0\n",
-    "        while i<len(esquerda) and j<len(direita):\n",
-    "            if esquerda[i]<direita[j]:\n",
-    "                dados[k]=esquerda[i]\n",
-    "                i=i+1\n",
-    "            else:\n",
-    "                dados[k]=direita[j]\n",
-    "                j=j+1\n",
-    "            k=k+1\n",
-    "        while i<len(esquerda):\n",
-    "            dados[k]=esquerda[i]\n",
-    "            i=i+1\n",
-    "            k=k+1\n",
-    "        while j<len(direita):\n",
-    "            dados[k]=direita[j]\n",
-    "            j=j+1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Para chamar a função acima utilizamos o seguinte trecho de código:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[17, 26, 31, 44, 54, 55, 77, 93]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dados = [54, 26, 93, 17, 77, 31, 44, 55]\n",
-    "mergeSort(dados)\n",
-    "print(dados) "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -125,6 +68,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[93, 77, 55, 54, 44, 31, 26, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mergeSort(dados): \n",
+    "    if len(dados) > 1: \n",
+    "        meio = len(dados)//2 \n",
+    "        esquerda = dados[:meio] \n",
+    "        direita = dados[meio:] \n",
+    "        mergeSort(esquerda)\n",
+    "        mergeSort(direita)\n",
+    "        i = j = k = 0 \n",
+    "        while i<len(esquerda) and j<len(direita): \n",
+    "            if esquerda[i]>direita[j]: \n",
+    "                dados[k]=esquerda[i] \n",
+    "                i=i+1 \n",
+    "            else: \n",
+    "                dados[k]=direita[j] \n",
+    "                j=j+1\n",
+    "            k=k+1 \n",
+    "        while i<len(esquerda): \n",
+    "            dados[k]=esquerda[i] \n",
+    "            i=i+1 \n",
+    "            k=k+1 \n",
+    "        while j<len(direita): \n",
+    "            dados[k]=direita[j] \n",
+    "            j=j+1 \n",
+    "            \n",
+    "dados = [54, 26, 93, 17, 77, 31, 44, 55]\n",
+    "mergeSort(dados) \n",
+    "print(dados) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -137,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,19 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Carta comprada: 3-Espadas\n",
-      "Carta comprada: 8-Paus\n",
-      "Carta comprada: 10-Espadas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -198,7 +174,7 @@
     "    def isEmpty(self):\n",
     "        return self.items == []  # Verifica se a pilha está vazia\n",
     "\n",
-    "    def push(self, item):\n",
+    "    def push(self, item): \n",
     "        self.items.append(item)  # Adiciona um item ao topo da pilha\n",
     "\n",
     "    def pop(self):\n",
@@ -208,7 +184,7 @@
     "def embaralhaCartas(baralho):\n",
     "    random.shuffle(baralho)  # Embaralha o baralho\n",
     "    pilha_de_cartas = Stack()  # Cria uma nova instância da classe Stack para representar a pilha\n",
-    "    for carta in baralho:\n",
+    "    for carta in baralho: # Para cada carta no baralho\n",
     "        pilha_de_cartas.push(carta)  # Adiciona cada carta embaralhada à pilha\n",
     "    return pilha_de_cartas  # Retorna a pilha de cartas\n",
     "\n",
@@ -234,29 +210,21 @@
     " \"10-Copas\",\"10-Paus\",\"10-Espadas\",\"10-Ouros\",\n",
     " \"J-Copas\",\"J-Paus\",\"J-Espadas\",\"J-Ouros\",\n",
     " \"Q-Copas\",\"Q-Paus\",\"Q-Espadas\",\"Q-Ouros\",\n",
-    " \"K-Copas\",\"K-Paus\",\"K-Espadas\",\"K-Ouros\"] \n",
-    "\n",
-    "pilha_de_cartas = embaralhaCartas(baralho)  # Embaralha o baralho e obtém a pilha de cartas\n",
-    "compraCartas(pilha_de_cartas)  # Compra uma carta da pilha e a imprime na tela\n",
-    "compraCartas(pilha_de_cartas)  # Compra outra carta da pilha e a imprime na tela\n",
-    "compraCartas(pilha_de_cartas)  # Compra mais uma carta da pilha e a imprime na tela\n"
+    " \"K-Copas\",\"K-Paus\",\"K-Espadas\",\"K-Ouros\"] \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Carta comprada: 2-Ouros\n",
-      "Carta comprada: 2-Espadas\n",
-      "Carta comprada: J-Copas\n",
-      "Carta comprada: 6-Espadas\n",
-      "Carta comprada: Q-Paus\n",
-      "Carta comprada: 5-Copas\n"
+      "Carta comprada: Q-Espadas\n",
+      "Carta comprada: 6-Copas\n",
+      "Carta comprada: 2-Paus\n"
      ]
     }
    ],
@@ -266,14 +234,7 @@
     "pilhaCartas = embaralhaCartas(baralho)\n",
     "compraCartas(pilhaCartas)\n",
     "compraCartas(pilhaCartas)\n",
-    "compraCartas(pilhaCartas)\n",
-    "\n",
-    "# Saída esperada:\n",
-    "\n",
-    "pilhaCartas = embaralhaCartas(baralho)\n",
-    "compraCartas(pilhaCartas)\n",
-    "compraCartas(pilhaCartas)\n",
-    "compraCartas(pilhaCartas) "
+    "compraCartas(pilhaCartas)"
    ]
   }
  ],
