--- a/Python/Estrutura de dados/atividadepratica.ipynb
+++ b/Python/Estrutura de dados/atividadepratica.ipynb
@@ -111,6 +111,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[93, 77, 55, 54, 44, 31, 26, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mergeSort(dados):\n",
+    "    if len(dados) > 1:\n",
+    "        meio = len(dados)//2\n",
+    "        esquerda = dados[:meio]\n",
+    "        direita = dados[meio:]\n",
+    "        mergeSort(esquerda)\n",
+    "        mergeSort(direita)\n",
+    "        i = j = k = 0\n",
+    "        while i<len(esquerda) and j<len(direita):\n",
+    "            if esquerda[i]>direita[j]:\n",
+    "                dados[k]=esquerda[i]\n",
+    "                i=i+1\n",
+    "            else:\n",
+    "                dados[k]=direita[j]\n",
+    "                j=j+1\n",
+    "            k=k+1\n",
+    "        while i<len(esquerda):\n",
+    "            dados[k]=esquerda[i]\n",
+    "            i=i+1\n",
+    "            k=k+1\n",
+    "        while j<len(direita):\n",
+    "            dados[k]=direita[j]\n",
+    "            j=j+1\n",
+    "            \n",
+    "dados = [54, 26, 93, 17, 77, 31, 44, 55]\n",
+    "mergeSort(dados)\n",
+    "print(dados) \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
