--- a/SQL/select.ipynb
+++ b/SQL/select.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
     "\n",
     "dados = pd.read_csv(r'C:\\Users\\thaty\\Desktop\\Estudos\\SQL\\Database\\Amazon Sale Report.csv')\n",
     "\n",
-    "print(tabulate(dados.head(), headers='keys', tablefmt='grid'))"
+    "print(tabulate(dados.head(5), headers='keys', tablefmt='grid'))"
    ]
   },
   {
