where clause explanation

--- a/SQL/where.ipynb
+++ b/SQL/where.ipynb
@@ -1,18 +1,60 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The SQL WHERE Clause\n",
+    "The WHERE clause is used to filter records.\n",
+    "\n",
+    "It is used to extract only those records that fulfill a specified condition.\n",
+    "\n",
+    "# Sintax\n",
+    "\n",
+    "SELECT column1, column2, ...\n",
+    "FROM table_name\n",
+    "WHERE condition; "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thaty\\AppData\\Local\\Temp\\ipykernel_28564\\1027660867.py:6: DtypeWarning: Columns (23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\thaty\\AppData\\Local\\Temp\\ipykernel_28564\\1016333659.py:6: DtypeWarning: Columns (23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dados = pd.read_csv(r'C:\\Users\\thaty\\Desktop\\Estudos\\SQL\\Database\\Amazon Sale Report.csv')\n"
      ]
     },
+    {
+     "data": {
+      "text/plain": [
+       "128975"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "conexao = sqlite3.connect(\":memory:\")\n",
+    "dados = pd.read_csv(r'C:\\Users\\thaty\\Desktop\\Estudos\\SQL\\Database\\Amazon Sale Report.csv')\n",
+    "dados.to_sql(\"amazon_sales\", conexao, index=False, if_exists=\"replace\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -34,14 +76,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import sqlite3\n",
-    "from tabulate import tabulate\n",
-    "\n",
-    "conexao = sqlite3.connect(\":memory:\")\n",
-    "dados = pd.read_csv(r'C:\\Users\\thaty\\Desktop\\Estudos\\SQL\\Database\\Amazon Sale Report.csv')\n",
-    "dados.to_sql(\"amazon_sales\", conexao, index=False, if_exists=\"replace\")\n",
-    "\n",
     "query = \"SELECT * FROM amazon_sales WHERE Status = 'Cancelled';\"\n",
     "\n",
     "resultado = pd.read_sql_query(query, conexao)\n",
