--- a/SQL/select.ipynb
+++ b/SQL/select.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thaty\\AppData\\Local\\Temp\\ipykernel_26376\\609098340.py:5: DtypeWarning: Columns (23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\thaty\\AppData\\Local\\Temp\\ipykernel_26376\\2731613014.py:5: DtypeWarning: Columns (23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dados = pd.read_csv(r'C:\\Users\\thaty\\Desktop\\Estudos\\SQL\\Database\\Amazon Sale Report.csv')\n"
      ]
     }
@@ -40,7 +40,48 @@
     "\n",
     "dados = pd.read_csv(r'C:\\Users\\thaty\\Desktop\\Estudos\\SQL\\Database\\Amazon Sale Report.csv')\n",
     "\n",
-    "print(tabulate(dados.head(5), headers='keys', tablefmt='grid'))"
+    "print(tabulate(dados.head() , headers='keys', tablefmt='grid'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Tipo de Dado\n",
+      "index                     int64\n",
+      "Order ID                 object\n",
+      "Date                     object\n",
+      "Status                   object\n",
+      "Fulfilment               object\n",
+      "Sales Channel            object\n",
+      "ship-service-level       object\n",
+      "Style                    object\n",
+      "SKU                      object\n",
+      "Category                 object\n",
+      "Size                     object\n",
+      "ASIN                     object\n",
+      "Courier Status           object\n",
+      "Qty                       int64\n",
+      "currency                 object\n",
+      "Amount                  float64\n",
+      "ship-city                object\n",
+      "ship-state               object\n",
+      "ship-postal-code        float64\n",
+      "ship-country             object\n",
+      "promotion-ids            object\n",
+      "B2B                        bool\n",
+      "fulfilled-by             object\n",
+      "Unnamed: 22              object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dados.dtypes.to_frame('Tipo de Dado'))\n"
    ]
   },
   {
