--- a/SQL/where.ipynb
+++ b/SQL/where.ipynb
@@ -11,14 +11,14 @@
     "\n",
     "# Sintax\n",
     "\n",
-    "SELECT column1, column2, ...\n",
-    "FROM table_name\n",
+    "SELECT column1, column2, ... <br>\n",
+    "FROM table_name <br>\n",
     "WHERE condition; "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "128975"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
