testing without tabulate print

--- a/SQL/where.ipynb
+++ b/SQL/where.ipynb
@@ -52,26 +52,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+---------+---------------------+----------+-----------+--------------+------------------+----------------------+---------+---------------------+---------------+--------+------------+------------------+-------+------------+----------+-------------+--------------+--------------------+----------------+----------------------------------------------+-------+----------------+---------------+\n",
-      "|    |   index | Order ID            | Date     | Status    | Fulfilment   | Sales Channel    | ship-service-level   | Style   | SKU                 | Category      | Size   | ASIN       | Courier Status   |   Qty | currency   |   Amount | ship-city   | ship-state   |   ship-postal-code | ship-country   | promotion-ids                                |   B2B | fulfilled-by   |   Unnamed: 22 |\n",
-      "+====+=========+=====================+==========+===========+==============+==================+======================+=========+=====================+===============+========+============+==================+=======+============+==========+=============+==============+====================+================+==============================================+=======+================+===============+\n",
-      "|  0 |       0 | 405-8078784-5731545 | 04-30-22 | Cancelled | Merchant     | Amazon.in        | Standard             | SET389  | SET389-KR-NP-S      | Set           | S      | B09KXVBD7Z |                  |     0 | INR        |   647.62 | MUMBAI      | MAHARASHTRA  |             400081 | IN             |                                              |     0 | Easy Ship      |           nan |\n",
-      "+----+---------+---------------------+----------+-----------+--------------+------------------+----------------------+---------+---------------------+---------------+--------+------------+------------------+-------+------------+----------+-------------+--------------+--------------------+----------------+----------------------------------------------+-------+----------------+---------------+\n",
-      "|  1 |       3 | 403-9615377-8133951 | 04-30-22 | Cancelled | Merchant     | Amazon.in        | Standard             | J0341   | J0341-DR-L          | Western Dress | L      | B099NRCT7B |                  |     0 | INR        |   753.33 | PUDUCHERRY  | PUDUCHERRY   |             605008 | IN             |                                              |     0 | Easy Ship      |           nan |\n",
-      "+----+---------+---------------------+----------+-----------+--------------+------------------+----------------------+---------+---------------------+---------------+--------+------------+------------------+-------+------------+----------+-------------+--------------+--------------------+----------------+----------------------------------------------+-------+----------------+---------------+\n",
-      "|  2 |       8 | 407-5443024-5233168 | 04-30-22 | Cancelled | Amazon       | Amazon.in        | Expedited            | SET200  | SET200-KR-NP-A-XXXL | Set           | 3XL    | B08L91ZZXN | Cancelled        |     0 |            |   nan    | HYDERABAD   | TELANGANA    |             500008 | IN             | IN Core Free Shipping 2015/04/08 23-48-5-108 |     0 |                |           nan |\n",
-      "+----+---------+---------------------+----------+-----------+--------------+------------------+----------------------+---------+---------------------+---------------+--------+------------+------------------+-------+------------+----------+-------------+--------------+--------------------+----------------+----------------------------------------------+-------+----------------+---------------+\n",
-      "|  3 |      23 | 404-6019946-2909948 | 04-30-22 | Cancelled | Merchant     | Amazon.in        | Standard             | SET291  | SET291-KR-PP-M      | Set           | M      | B099NK55YG |                  |     0 | INR        |   570.48 | pune        | MAHARASHTRA  |             411044 | IN             |                                              |     0 | Easy Ship      |           nan |\n",
-      "+----+---------+---------------------+----------+-----------+--------------+------------------+----------------------+---------+---------------------+---------------+--------+------------+------------------+-------+------------+----------+-------------+--------------+--------------------+----------------+----------------------------------------------+-------+----------------+---------------+\n",
-      "|  4 |      29 | 404-5933402-8801952 | 04-30-22 | Cancelled | Merchant     | Amazon.in        | Standard             | JNE2132 | JNE2132-KR-398-XXXL | kurta         | 3XL    | B07JG3CND8 |                  |     0 |            |   nan    | GUWAHATI    | ASSAM        |             781003 | IN             |                                              |     0 | Easy Ship      |           nan |\n",
-      "+----+---------+---------------------+----------+-----------+--------------+------------------+----------------------+---------+---------------------+---------------+--------+------------+------------------+-------+------------+----------+-------------+--------------+--------------------+----------------+----------------------------------------------+-------+----------------+---------------+\n"
+      "   index             Order ID      Date     Status Fulfilment Sales Channel   \\\n",
+      "0      0  405-8078784-5731545  04-30-22  Cancelled   Merchant      Amazon.in   \n",
+      "1      3  403-9615377-8133951  04-30-22  Cancelled   Merchant      Amazon.in   \n",
+      "2      8  407-5443024-5233168  04-30-22  Cancelled     Amazon      Amazon.in   \n",
+      "3     23  404-6019946-2909948  04-30-22  Cancelled   Merchant      Amazon.in   \n",
+      "4     29  404-5933402-8801952  04-30-22  Cancelled   Merchant      Amazon.in   \n",
+      "\n",
+      "  ship-service-level    Style                  SKU       Category  ...  \\\n",
+      "0           Standard   SET389       SET389-KR-NP-S            Set  ...   \n",
+      "1           Standard    J0341           J0341-DR-L  Western Dress  ...   \n",
+      "2          Expedited   SET200  SET200-KR-NP-A-XXXL            Set  ...   \n",
+      "3           Standard   SET291       SET291-KR-PP-M            Set  ...   \n",
+      "4           Standard  JNE2132  JNE2132-KR-398-XXXL          kurta  ...   \n",
+      "\n",
+      "  currency  Amount   ship-city   ship-state ship-postal-code  ship-country  \\\n",
+      "0      INR  647.62      MUMBAI  MAHARASHTRA         400081.0            IN   \n",
+      "1      INR  753.33  PUDUCHERRY   PUDUCHERRY         605008.0            IN   \n",
+      "2     None     NaN   HYDERABAD    TELANGANA         500008.0            IN   \n",
+      "3      INR  570.48        pune  MAHARASHTRA         411044.0            IN   \n",
+      "4     None     NaN    GUWAHATI        ASSAM         781003.0            IN   \n",
+      "\n",
+      "                                  promotion-ids B2B  fulfilled-by Unnamed: 22  \n",
+      "0                                          None   0     Easy Ship         NaN  \n",
+      "1                                          None   0     Easy Ship         NaN  \n",
+      "2  IN Core Free Shipping 2015/04/08 23-48-5-108   0          None         NaN  \n",
+      "3                                          None   0     Easy Ship         NaN  \n",
+      "4                                          None   0     Easy Ship         NaN  \n",
+      "\n",
+      "[5 rows x 24 columns]\n"
      ]
     }
    ],
@@ -80,7 +96,9 @@
     "\n",
     "resultado = pd.read_sql_query(query, conexao)\n",
     "\n",
-    "print(tabulate(resultado.head(5), headers='keys', tablefmt='grid'))"
+    "# print(tabulate(resultado.head(5), headers='keys', tablefmt='grid'))\n",
+    "\n",
+    "print(resultado.head(5))"
    ]
   }
  ],
